Backport index gatekeeper (#707)
* cherry-pick 172c2c4: Add permits for index entries

* fix migration name conflict for IndexSettingsAutoPermit

   (actually the migration id number and order 0016 were already conflicting with the existing migration_0016_fixschemas)

---------

Co-authored-by: Marek Suchánek <marek.suchanek@gmail.com>