@@ -33,7 +33,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -49,6 +48,7 @@ public class IndexEntryMapper {
                 toStateDTO(indexEntry.getState(),
                         indexEntry.getLastRetrievalTime(),
                         validThreshold),
+                indexEntry.getPermit(),
                 indexEntry.getRegistrationTime().toString(),
                 indexEntry.getModificationTime().toString()
         );
@@ -63,10 +63,11 @@ public class IndexEntryMapper {
                 toStateDTO(indexEntry.getState(),
                         indexEntry.getLastRetrievalTime(),
                         validThreshold),
+                indexEntry.getPermit(),
                 indexEntry.getCurrentMetadata(),
                 StreamSupport.stream(events.spliterator(), false)
                         .map(eventMapper::toDTO)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 indexEntry.getRegistrationTime().toString(),
                 indexEntry.getModificationTime().toString(),
                 indexEntry.getLastRetrievalTime().toString()
